update elasticsearch client
